RESOLVED FIXED33148
Fix some PLATFORM(*_ENDIAN) uses to CPU()
https://bugs.webkit.org/show_bug.cgi?id=33148
Summary Fix some PLATFORM(*_ENDIAN) uses to CPU()
Maciej Stachowiak
Reported 2010-01-04 05:01:25 PST
Fix some PLATFORM(*_ENDIAN) uses to CPU()
Attachments
Patch (3.57 KB, patch)
2010-01-04 05:06 PST, Maciej Stachowiak
hausmann: review+
Maciej Stachowiak
Comment 1 2010-01-04 05:06:04 PST
WebKit Review Bot
Comment 2 2010-01-04 05:06:53 PST
Attachment 45797 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/image-decoders/bmp/BMPImageReader.h:205: Non-label code inside switch statements should be indented. [whitespace/indent] [4] Total errors found: 1
Maciej Stachowiak
Comment 3 2010-01-04 05:19:21 PST
Note You need to log in before you can comment on or make changes to this bug.