2010-01-04  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Simon Hausmann.

        Fix some PLATFORM(*_ENDIAN) uses to CPU()
        https://bugs.webkit.org/show_bug.cgi?id=33148

        * runtime/JSCell.cpp:
        (JSC::):
        * runtime/JSValue.h:
        (JSC::JSValue::):
2010-01-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Simon Hausmann.

        Fix some PLATFORM(*_ENDIAN) uses to CPU()
        https://bugs.webkit.org/show_bug.cgi?id=33148

        * platform/image-decoders/bmp/BMPImageReader.h:
        (WebCore::BMPImageReader::readUint16):
        (WebCore::BMPImageReader::readUint32):
        (WebCore::BMPImageReader::readCurrentPixel):


Canonical link: https://commits.webkit.org/44144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52731 268f45cc-cd09-0410-ab3c-d52691b4dbfc