WebCore/platform/image-decoders/bmp/BMPImageReader.h
@@ -46,7 +46,7 @@ namespace WebCore {
         {
             uint16_t result;
             memcpy(&result, &data->data()[offset], 2);
-        #if PLATFORM(BIG_ENDIAN)
+        #if CPU(BIG_ENDIAN)
             result = ((result & 0xff) << 8) | ((result & 0xff00) >> 8);
         #endif
             return result;
@@ -56,7 +56,7 @@ namespace WebCore {
         {
             uint32_t result;
             memcpy(&result, &data->data()[offset], 4);
-        #if PLATFORM(BIG_ENDIAN)
+        #if CPU(BIG_ENDIAN)
             result = ((result & 0xff) << 24) | ((result & 0xff00) << 8) |
                 ((result & 0xff0000) >> 8) | ((result & 0xff000000) >> 24);
         #endif
@@ -202,7 +202,7 @@ namespace WebCore {
                 // won't read it.
                 uint32_t pixel;
                 memcpy(&pixel, &m_data->data()[m_decodedOffset + offset], 3);
-        #if PLATFORM(BIG_ENDIAN)
+        #if CPU(BIG_ENDIAN)
                 pixel = ((pixel & 0xff00) << 8) | ((pixel & 0xff0000) >> 8) |
                     ((pixel & 0xff000000) >> 24);
         #endif
